--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anasayfa</title>
 </head>
 
 <body>
@@ -17,4 +17,6 @@ git init
 git status
 git add . --- dosya adı
 git commit -m "commit mesajı -ilk commit-"
+git log
+git diff
 */
