yeni yorum satırı eklendi

--- a/index.html
+++ b/index.html
@@ -19,4 +19,6 @@ git add . --- dosya adı
 git commit -m "commit mesajı -ilk commit-"
 git log
 git diff
+git branch --- branch isimleri
+git checkout branch_ismi --- branch'e geçiş yapar
 */
