--- a/about.html
+++ b/about.html
@@ -1,2 +1,3 @@
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum libero deserunt unde vitae reiciendis aliquid! Aperiam
     illum iusto voluptatem doloremque, natus, asperiores repellat voluptates dolor facere minima neque non enim?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Quisquam, voluptatibus. Quisquam,
