index sayfası güncellendi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe quos dicta sapiente accusamus, adipisci odio qui
+        in, ex recusandae tenetur hic incidunt facere labore optio laborum nesciunt tempora deleniti repellendus.</p>
 </body>
 
 </html>
