dev branchiinde gelişştirme yapıldı

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe quos dicta sapiente accusamus, adipisci odio qui
         in, ex recusandae tenetur hic incidunt facere labore optio laborum nesciunt tempora deleniti repellendus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
 </body>
 
 </html>
