yeni değişiklik eklendi

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Bu, HTML dosyasıdır.</p>
     <p>Bu dosya, Git ile versiyon kontrolü için kullanılacaktır.</p>
     <p>Bu dosya üzerinde değişiklik yaparak commit işlemi gerçekleştireceğiz.</p>
+
+    <p>Bu dosya üzerinde değişiklik yaparak commit işlemi gerçekleştireceğiz.</p>
 </body>
 
 </html>
